[gd_scene load_steps=3 format=3 uid="uid://7l06ar4bvu0j"]

[ext_resource type="Script" uid="uid://nyx3kgc2coj7" path="res://main/main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://c4pyy0gi0trv7" path="res://graphics/liss_pattern.png" id="3_lquwl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Background" type="Node2D" parent="."]
position = Vector2(150, 250)

[node name="Parallax2D" type="Parallax2D" parent="Background"]
repeat_size = Vector2(121, 180)
autoscroll = Vector2(-100, -75)
repeat_times = 7
follow_viewport = false
ignore_camera_scroll = true
screen_offset = Vector2(3.205, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Background/Parallax2D"]
texture = ExtResource("3_lquwl")

[node name="Content" type="Node2D" parent="."]

[node name="MarkerLeft" type="Marker2D" parent="."]
position = Vector2(-482, 0)

[node name="MarkerRight" type="Marker2D" parent="."]
position = Vector2(482, 0)

[node name="MarkerTop" type="Marker2D" parent="."]
position = Vector2(0, -800)

[node name="MarkerBottom" type="Marker2D" parent="."]
position = Vector2(0, 800)

[node name="MarkerCenter" type="Marker2D" parent="."]
